sqlxo/tests/orm/derive/try/err/not_public.stderr
error: `Query` requires a `pub` struct
 --> tests/orm/derive/try/err/not_public.rs:6:33
  |
6 | #[derive(Debug, Clone, FromRow, Query)]
  |                                 ^^^^^
  |
  = note: this error originates in the derive macro `Query` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: the feature `inherent_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
 --> tests/orm/derive/try/err/not_public.rs:1:12
  |
1 | #![feature(inherent_associated_types)]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
  = note: `#[warn(incomplete_features)]` on by default
